who-we-are: fixed label alignment

--- a/src/sass/blocks/who-we-are.scss
+++ b/src/sass/blocks/who-we-are.scss
@@ -49,7 +49,7 @@
         &_content {
             display: flex;
             flex-direction: column;
-            width: 50%;
+            width: 62%;
             padding-left: 35px;
             padding-top: 60px;
             @include media-breakpoint-down(md) {
